// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for TestSummary component: should render the component when BB is defined and match snapshot 1`] = `
<div>
  <div
    class="test-summary-component"
    data-testid="test-summary-component"
  >
    <div
      class="test-summary-row test-summary-header"
    >
      <div
        data-testid="test-summary-bb-header"
      >
        Building Block:
      </div>
      <div
        data-testid="test-summary-passed-header"
      >
        Tests Passed:
      </div>
      <div
        data-testid="test-summary-failed-header"
      >
        Tests Failed:
      </div>
      <div
        data-testid="test-summary-compatibility-header"
      >
        Compatibility:
      </div>
    </div>
    <div
      class="test-summary-row test-summary-label"
    >
      <div
        class="test-summary-bb"
        data-testid="test-summary-bb-label"
      >
        <img
          alt="Logo for: bb-payments"
          class="bb-image test-summary-icon"
          data-nimg="1"
          decoding="async"
          height="18"
          loading="lazy"
          src="/_next/image?url=%2Fimages%2FbuildingBlocks%2Fbb-payments.png&w=48&q=75"
          srcset="/_next/image?url=%2Fimages%2FbuildingBlocks%2Fbb-payments.png&w=32&q=75 1x, /_next/image?url=%2Fimages%2FbuildingBlocks%2Fbb-payments.png&w=48&q=75 2x"
          style="color: transparent;"
          width="18"
        />
        <p>
          Payments
        </p>
      </div>
      <div
        data-testid="test-summary-passed-label"
      >
        <p>
          2
        </p>
      </div>
      <div
        data-testid="test-summary-failed-label"
      >
        <p>
          2
        </p>
      </div>
      <div
        data-testid="test-summary-compatibility-label"
      >
        <p>
          34%
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for TestSummary component: should render the component when BB is undefined and match snapshot 1`] = `
<div>
  <div
    class="test-summary-component"
    data-testid="test-summary-component"
  >
    <div
      class="test-summary-row test-summary-header"
    >
      <div
        data-testid="test-summary-bb-header"
      >
        Building Block:
      </div>
      <div
        data-testid="test-summary-passed-header"
      >
        Tests Passed:
      </div>
      <div
        data-testid="test-summary-failed-header"
      >
        Tests Failed:
      </div>
      <div
        data-testid="test-summary-compatibility-header"
      >
        Compatibility:
      </div>
    </div>
    <div
      class="test-summary-row test-summary-label"
    >
      <div
        class="test-summary-bb"
        data-testid="test-summary-bb-label"
      >
        <div
          class="loading-bar"
        />
      </div>
      <div
        data-testid="test-summary-passed-label"
      >
        <div
          class="loading-bar"
        />
      </div>
      <div
        data-testid="test-summary-failed-label"
      >
        <div
          class="loading-bar"
        />
      </div>
      <div
        data-testid="test-summary-compatibility-label"
      >
        <div
          class="loading-bar"
        />
      </div>
    </div>
  </div>
</div>
`;
